improved api controllers. started adding javascript

--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -62,7 +62,13 @@ body > section {
 
 .table-row{
     cursor: pointer;
+    background-color: #ddf;
+    padding: 30px;
+    margin: 10px;
+    border: 1px solid #333;
+    transition: 0.15s;
 }
+
 /*Table Ends*/
 
 .album-item{
