--- a/src/main/resources/templates/allSongs.html
+++ b/src/main/resources/templates/allSongs.html
@@ -32,10 +32,10 @@
     <div class="pagination">
 
         <div class="page-viewer__button" th:if="${sPageNumbers > 0}">
-            <a th:href="${'/allArtists/firstPage'}" class="page-viewer__button__link">First</a>
+            <a th:href="${'/allSongs/firstPage'}" class="page-viewer__button__link">First</a>
         </div>
         <div class="page-viewer__button" th:if="${sPageNumbers > 0}">
-            <a th:href="${'/allArtists/previousPage'}" class="page-viewer__button__link">Previous</a>
+            <a th:href="${'/allSongs/previousPage'}" class="page-viewer__button__link">Previous</a>
         </div>
         <!--            current page viewer div-->
         <div class="page-viewer__button">
