--- a/src/main/resources/templates/allAlbums.html
+++ b/src/main/resources/templates/allAlbums.html
@@ -32,21 +32,21 @@
     <div class="pagination">
 
         <div class="page-viewer__button" th:if="${alPageNumbers > 1}">
-            <a th:href="${'/allArtists/firstPage'}" class="page-viewer__button__link">First</a>
+            <a th:href="${'/allAlbums/firstPage'}" class="page-viewer__button__link">First</a>
         </div>
         <div class="page-viewer__button" th:if="${alPageNumbers > 1}">
-            <a th:href="${'/allArtists/previousPage'}" class="page-viewer__button__link">Previous</a>
+            <a th:href="${'/allAlbums/previousPage'}" class="page-viewer__button__link">Previous</a>
         </div>
         <!--            current page viewer div-->
         <div class="page-viewer__button">
             <span class="page-viewer__button__link" th:text="${alPageNumbers}"></span>
         </div>
         <div class="page-viewer__button" th:if="${alPageNumbers < totalPages}">
-            <a th:href="${'/allArtists/nextPage'}" class="page-viewer__button__link">Next</a>
+            <a th:href="${'/allAlbums/nextPage'}" class="page-viewer__button__link">Next</a>
         </div>
 
         <div class="page-viewer__button" th:if="${alPageNumbers < totalPages }">
-            <a th:href="${'/allArtists/lastPage'}" class="page-viewer__button__link">Last</a>
+            <a th:href="${'/allAlbums/lastPage'}" class="page-viewer__button__link">Last</a>
         </div>
     </div>
 </section>
