--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -4,12 +4,25 @@ body{
     background-color: ghostwhite;
 }
 
+/*Header starts*/
+header{
+    margin-bottom: 20px;
+}
+
+nav > .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
+/*Header ends*/
+
 body > section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 100px;
     width: 80%;
     gap: 10px;
 }
@@ -25,6 +38,11 @@ body > section {
 }
 
 /*Table Starts*/
+.tables-container{
+    display: flex;
+    direction: revert;
+}
+
 
 .table{
     width: 80%;
@@ -62,11 +80,15 @@ body > section {
 
 .table-row{
     cursor: pointer;
-    background-color: #ddf;
+    background-color: #c7c7c7;
     padding: 30px;
     margin: 10px;
     border: 1px solid #333;
     transition: 0.15s;
+}
+
+.table-row:hover{
+    transform: scale(1.1);
 }
 
 /*Table Ends*/
