implemented more endpoints and a new artist preview section

--- a/src/main/resources/templates/allAlbums.html
+++ b/src/main/resources/templates/allAlbums.html
@@ -8,21 +8,21 @@
         <h1>All Albums</h1>
     </div>
     <div class="tables-container">
-        <div class="preview-block">
+        <div class="preview-block ">
             <div class="preview-block__title">
-                <h2>Albums Songs</h2>
+                Album Preview
             </div>
             <div class="preview-block__table">
                 <table class="table table-bordered table-condensed table-striped table-hover">
                     <thead class="table-header">
-                    <th>song Name</th>
+                    <th>Song Name</th>
                     </thead>
                     <tbody  id = "preview-song-names">
                     </tbody>
                 </table>
             </div>
         </div>
-        <table class='table table-bordered table-condensed table-striped table-hover' id="all-albums-table">
+        <table class='table table-bordered table-condensed table-striped table-hover full-table' id="all-albums-table">
             <thead class="table-header">
             <!--            <th >artistName</th>-->
             <th >albumName</th>
