--- a/src/main/resources/templates/fragments/fragment_parts/header-parts.html
+++ b/src/main/resources/templates/fragments/fragment_parts/header-parts.html
@@ -5,7 +5,7 @@
 
   <a th:fragment="allArtists (content)" class="nav-link" href="/allArtists">All Artists</a>
 
-  <a th:fragment="backButton (content)" class="nav-link" th:href="${content}">Back</a>
+<!--  <a th:fragment="backButton (content)" class="nav-link" th:href="${content}">Back</a>-->
 
 
 
