--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -2,19 +2,24 @@
 body{
     margin-bottom: 100px ;
     background-color: ghostwhite;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 /*Header starts*/
 header{
     margin-bottom: 20px;
+    width: 100%;
 }
 
-nav > .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-}
+/*nav > .container{*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*    padding: 10px 0;*/
+/*}*/
 
 /*Header ends*/
 
@@ -38,9 +43,25 @@ body > section {
 }
 
 /*Table Starts*/
+
 .tables-container{
     display: flex;
-    direction: revert;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.preview-block{
+    flex-basis: 50%;
+    height: 100%;
+
+}
+
+.full-table{
+    flex-basis: 50%;
+    height: 100%;
 }
 
 
