--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,8 +7,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto" th:each="item : ${list}">
-            <li class="navbar-nav" th:replace="~{fragments/fragment_parts/header-parts :: ${item.type}(${item.content})}"></li>
+          <ul class="navbar-nav me-auto" >
+            <li class="navbar-nav" th:each="item : ${list}" th:replace="~{fragments/fragment_parts/header-parts}"></li>
           </ul>
         </div>
       </div>
