changed layout for all html pages. and front end changes to site

--- a/src/main/resources/templates/addSong.html
+++ b/src/main/resources/templates/addSong.html
@@ -64,5 +64,6 @@
     </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
