--- a/src/main/resources/templates/allArtists.html
+++ b/src/main/resources/templates/allArtists.html
@@ -60,5 +60,6 @@
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 <script src="/js/artist.js"></script>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
