--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,5 +16,7 @@
       <button type="button" class="btn btn-secondary btn-lg">Page History</button>
     </a>
   </div>
+  <script src="/js/app.js" defer></script>
   </body>
+
 </html>
