--- a/src/main/resources/templates/addArtist.html
+++ b/src/main/resources/templates/addArtist.html
@@ -26,5 +26,6 @@
     </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
