--- a/src/main/resources/templates/fullAlbum.html
+++ b/src/main/resources/templates/fullAlbum.html
@@ -71,5 +71,6 @@
 
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
