--- a/src/main/resources/templates/fullArtist.html
+++ b/src/main/resources/templates/fullArtist.html
@@ -43,5 +43,6 @@
     </table>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
