--- a/src/main/resources/templates/fullSong.html
+++ b/src/main/resources/templates/fullSong.html
@@ -34,5 +34,6 @@
     </div>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script src="/js/app.js" defer></script>
 </body>
 </html>
