--- a/src/main/resources/templates/pageHistory.html
+++ b/src/main/resources/templates/pageHistory.html
@@ -21,5 +21,6 @@
             </table>
         </section>
         <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+    <script src="/js/app.js" defer></script>
     </body>
 </html>
