--- a/src/main/resources/templates/allSongs.html
+++ b/src/main/resources/templates/allSongs.html
@@ -7,7 +7,7 @@
     <div class="table-caption">
         <h1>All Songs</h1>
     </div>
-    <table class='table table-bordered table-condensed table-striped table-hover'>
+    <table class='table table-bordered table-condensed table-striped table-hover' id="all-songs-table">
         <thead class="table-header">
             <th >songTitle</th>
 <!--            <th >artistName</th>-->
@@ -17,40 +17,32 @@
             <th >explicit</th>
 <!--            <th >featuredArtists</th>-->
         </thead>
-        <tbody>
-            <tr class="table-row" th:each="song: ${songs}" th:data-href="${'/allSongs/fullSong/' + song.getId()}">
-                <td  th:text="${song.getSongTitle()}"></td>
-<!--                <td  th:text="${song.getArtistName}"></td>-->
-<!--                <td  th:text="${song.getAlbumName}"></td>-->
-                <td  th:text="${song.getTrackNumber}"></td>
-                <td  th:text="${song.getDurationMS}"></td>
-                <td  th:text="${song.isExplicit}"></td>
-<!--                <td th:text="${song.getFeaturedArtists().size()}"></td>-->
-            </tr>
+        <tbody id="all-songs-table-body">
         </tbody>
     </table>
     <div class="pagination">
 
-        <div class="page-viewer__button" th:if="${sPageNumbers > 0}">
-            <a th:href="${'/allSongs/firstPage'}" class="page-viewer__button__link">First</a>
+        <div class="page-viewer__button button"  id="first-page-button">
+            <a class="page-viewer__button__link">First</a>
         </div>
-        <div class="page-viewer__button" th:if="${sPageNumbers > 0}">
-            <a th:href="${'/allSongs/previousPage'}" class="page-viewer__button__link">Previous</a>
+        <div class="page-viewer__button button"  id="previous-page-button">
+            <a class="page-viewer__button__link">Previous</a>
         </div>
         <!--            current page viewer div-->
-        <div class="page-viewer__button">
-            <span class="page-viewer__button__link" th:text="${sPageNumbers}"></span>
+        <div class="page-viewer__button button">
+            <span class="page-viewer__button__link"  id="current-page-view"></span>
         </div>
-        <div class="page-viewer__button" th:if="${sPageNumbers < totalPages - 1}">
-            <a th:href="${'/allSongs/nextPage'}" class="page-viewer__button__link">Next</a>
+        <div class="page-viewer__button button" id="next-page-button">
+            <a class="page-viewer__button__link">Next</a>
         </div>
 
-        <div class="page-viewer__button" th:if="${sPageNumbers < totalPages - 1}">
-            <a th:href="${'/allSongs/lastPage'}" class="page-viewer__button__link">Last</a>
+        <div class="page-viewer__button button" id="last-page-button">
+            <a class="page-viewer__button__link">Last</a>
         </div>
     </div>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 <script src="/js/app.js" defer></script>
+<script src="/js/song.js" defer></script>
 </body>
 </html>
