--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,10 +4,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title th:text="${title}"></title>
-  <script src="//code.jquery.com/jquery-1.11.0.min.js" ></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.2/css/bootstrap.min.css}"/>
   <script defer th:src="@{/webjars/bootstrap/js/5.1.2/bootstrap.bundle.min.js}">
   </script>
-
   <link rel="stylesheet" href="/css/global.css" />
 </head>
