--- a/src/main/resources/templates/allAlbums.html
+++ b/src/main/resources/templates/allAlbums.html
@@ -22,7 +22,7 @@
                 </table>
             </div>
         </div>
-        <table class='table table-bordered table-condensed table-striped table-hover full-table' id="all-albums-table">
+        <table class='table table-bordered table-condensed table-striped table-hover ' id="all-albums-table">
             <thead class="table-header">
             <!--            <th >artistName</th>-->
             <th >albumName</th>
@@ -60,6 +60,5 @@
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
 <script src="/js/album.js"></script>
-<script src="/js/app.js" defer></script>
 </body>
 </html>
