--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,7 +6,8 @@
   <title th:text="${title}"></title>
   <script src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
   <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.2/css/bootstrap.min.css}"/>
-  <script defer th:src="@{/webjars/bootstrap/js/5.1.2/bootstrap.bundle.min.js}">
-  </script>
+  <script defer th:src="@{/webjars/bootstrap/5.1.2/js/bootstrap.bundle.min.js}"></script>
+  <script type="text/javascript" th:src="@{/webjars/jquery/3.6.2/jquery.js}"></script>
+  <script src="/js/app.js" defer></script>
   <link rel="stylesheet" href="/css/global.css" />
 </head>
