--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -47,9 +47,7 @@ body > section {
 .tables-container{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    height: 75vh;
     width: 100%;
 }
 
@@ -223,4 +221,22 @@ a {
 
 .button{
     cursor: pointer;
+}
+
+
+
+/*   Login   */
+#login-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tab-pane > form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 10px;
 }
