--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,8 +15,10 @@
     <a href="/pageHistory">
       <button type="button" class="btn btn-secondary btn-lg">Page History</button>
     </a>
+    <a href="/login">
+      <button type="button" class="btn btn-secondary btn-lg">login</button>
+    </a>
   </div>
-  <script src="/js/app.js" defer></script>
   </body>
 
 </html>
