Spring security implementation continuation

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
         <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
             <form>
                 <div class="form-floating mb-4">
-                    <input type="email" name="username" id="login-user-name" class="form-control" placeholder="Username"/>
+                    <input type="text" name="username" id="login-user-name" class="form-control" placeholder="Username"/>
                     <label class="form-label" for="login-user-name">Username</label>
                 </div>
 
@@ -33,7 +33,7 @@
         <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
             <form>
                 <div class="form-floating mb-4">
-                    <input type="email" id="register-user-name" class="form-control" placeholder="User Name"/>
+                    <input type="text" id="register-user-name" class="form-control" placeholder="User Name"/>
                     <label class="form-label" for="register-user-name">User Name</label>
                 </div>
 
