--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto" >
+          <ul class="navbar-nav me-auto" id="navbarText">
             <li class="navbar-nav" th:each="item : ${list}" th:replace="~{fragments/fragment_parts/header-parts}"></li>
           </ul>
         </div>
