--- a/src/main/resources/templates/addArtist.html
+++ b/src/main/resources/templates/addArtist.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
-    <form action="/api/artist/create" method="post" class="row g-3 needs-validation" th:object="${artist}"  id="addArtistForm" novalidate>
+    <form action="/api/artist/create" method="post" class="row g-3 needs-validation" th:object="${artist}"  id="add-artist-form" novalidate>
         <div class="col-md-4">
             <label for="artistName" class="form-label">artistName</label>
             <input type="text" name="artistName" id="artistName" class="form-control" required>
@@ -26,5 +26,6 @@
     </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script th:src="@{/js/addArtist.js}"></script>
 </body>
 </html>
