--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
-
+<ul th:fragment="loginRegister (content)" class="navbar-nav ms-auto">
+    <li class="nav-item me-2 pt-2" sec:authorize="isAuthenticated()">
+        <span class="navbar-text">Welcome, <span sec:authentication="name"></span>!</span>
+    </li>
+    <li sec:authorize="isAuthenticated()">
+        <form class="d-flex" th:action="@{/logout}" th:method="POST">
+            <button type="submit" class="btn btn-secondary">Sign out</button>
+        </form>
+    </li>
+    <li class="nav-item" sec:authorize="!isAuthenticated()">
+        <a class="nav-link" th:href="@{/login}" th:classappend="${page == 'login'} ? 'active' : ''">Sign in</a>
+    </li>
+</ul>
 <div id="login-container">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -16,7 +30,7 @@
     </ul>
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
-            <form>
+            <form th:action="@{/login}" method="POST">
                 <div class="form-floating mb-4">
                     <input type="text" name="username" id="login-user-name" class="form-control" placeholder="Username"/>
                     <label class="form-label" for="login-user-name">Username</label>
@@ -31,21 +45,26 @@
             </form>
         </div>
         <div class="tab-pane fade" id="pills-register" role="tabpanel" aria-labelledby="pills-register-tab">
-            <form>
+            <form th:action="@{/register}" method="post">
                 <div class="form-floating mb-4">
-                    <input type="text" id="register-user-name" class="form-control" placeholder="User Name"/>
+                    <input name="username" type="text" id="register-user-name" class="form-control" placeholder="User Name"/>
                     <label class="form-label" for="register-user-name">User Name</label>
                 </div>
 
                 <div class="form-floating mb-4">
-                    <input type="password" id="register-password" class="form-control" placeholder="Confirm-Password"/>
+                    <input name="password" type="password" id="register-password" class="form-control" placeholder="Confirm-Password"/>
                     <label class="form-label" for="register-password">Password</label>
                 </div>
 
-                <div class="form-floating mb-4">
-                    <input type="password" id="register-confirm-password" class="form-control" placeholder="Confirm-Password"/>
-                    <label class="form-label" for="register-confirm-password">Confirm - Password</label>
+                <div class="form-group">
+                    <label for="register-role">User Role</label>
+                    <select name="role" class="form-control" id="register-role">
+                        <option>USER</option>
+                        <option>ADMIN</option>
+                    </select>
                 </div>
+
+
 
                 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
             </form>
