cleaning up dependancies and removing unnecessary code/libraries. Completed Spring security with roles. entity creation is broken

--- a/src/main/resources/templates/addArtist.html
+++ b/src/main/resources/templates/addArtist.html
@@ -26,6 +26,6 @@
     </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
-<script th:src="@{/js/addArtist.js}"></script>
+<script th:src="@{/js/forms/addArtist.js}"></script>
 </body>
 </html>
