--- a/src/main/resources/templates/addAlbum.html
+++ b/src/main/resources/templates/addAlbum.html
@@ -66,6 +66,7 @@
     </form>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
+<script th:src="@{/js/forms/addAlbum.js}"></script>
 </body>
 <script src="/js/forms/addAlbum.js"></script>
 </html>
