--- a/src/main/resources/templates/allAlbums.html
+++ b/src/main/resources/templates/allAlbums.html
@@ -38,7 +38,6 @@
     </div>
 
     <div class="pagination">
-
         <div class="page-viewer__button button"  id="first-page-button">
             <a class="page-viewer__button__link">First</a>
         </div>
@@ -59,6 +58,6 @@
     </div>
 </section>
 <footer th:replace="~{fragments/footer :: footer (${footerList})}"></footer>
-<script src="/js/album.js"></script>
+<script th:src="@{/js/album.js}"></script>
 </body>
 </html>
