--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -6,20 +6,13 @@
   <meta name="_csrf" th:content="${_csrf.token}"/>
   <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
   <title th:text="${title}"></title>
-  <script type="text/javascript" th:src="@{/webjars/jquery/3.6.2/jquery.js}"></script>
   <script
           defer
           th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"
   ></script>
-  <link
-          rel="stylesheet"
-          th:href="@{/webjars/bootstrap-icons/font/bootstrap-icons.css} "
-  />
-  <link rel="stylesheet" th:href="@{/css/style.css}">
+  <link rel="stylesheet" th:href="@{/css/global.css}">
   <link
           rel="stylesheet"
           th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"
   />
-  <script src="/js/app.js" defer></script>
-  <link rel="stylesheet" href="/css/global.css" />
 </head>
