--- a/src/main/resources/templates/fullAlbum.html
+++ b/src/main/resources/templates/fullAlbum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
-<body id="full">
+<body id="full" class="pb-5">
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
     <table class='table table-bordered table-condensed table-striped table-hover'>
