--- a/src/main/resources/templates/addArtist.html
+++ b/src/main/resources/templates/addArtist.html
@@ -19,9 +19,9 @@
                 Looks good!
             </div>
         </div>
-<!--        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger">-->
-<!--            <p>The form contained errors!</p>-->
-<!--        </div>-->
+        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger">
+            <p>The form contained errors!</p>
+        </div>
         <button type="submit" value="submit" class="btn btn-primary">Submit</button>
     </form>
 </section>
