--- a/src/main/resources/templates/fullSong.html
+++ b/src/main/resources/templates/fullSong.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head (${title})}"></head>
+<script defer th:src="@{/js/fullSong.js}"></script>
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
