--- a/src/main/resources/templates/addSong.html
+++ b/src/main/resources/templates/addSong.html
@@ -4,7 +4,7 @@
 <body>
 <header th:replace="~{fragments/header :: header (${headerList})}"></header>
 <section>
-    <form method="post" class="row g-3 needs-validation" th:object="${song}" novalidate>
+    <form id="add-song-form" method="post" class="row g-3 needs-validation" th:object="${song}" novalidate>
         <div class="col-md-4">
             <label for="url" class="form-label">url</label>
             <input type="text" name="url" id="url" class="form-control" required>
@@ -15,20 +15,6 @@
         <div class="col-md-4">
             <label for="songTitle" class="form-label"> Title</label>
             <input type="text" name="songTitle" id="songTitle" class="form-control" required>
-            <div class="valid-feedback">
-                Looks good!
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="artistName" class="form-label">Artist</label>
-            <input type="text" name="artistName" id="artistName" class="form-control" required>
-            <div class="invalid-feedback">
-                Format: ((MainArtist)) - ((FeaturingArtist)) - ...
-            </div>
-        </div>
-        <div class="col-md-4">
-            <label for="albumName" class="form-label">Album Name</label>
-            <input type="text" name="albumName" id="albumName" class="form-control" required>
             <div class="valid-feedback">
                 Looks good!
             </div>
@@ -50,7 +36,7 @@
         <div class="col-md-4">
             <label for="explicit" class="form-label">Explicit?</label>
             <select name="explicit" id="explicit" class="form-select" required>
-                <option value="true">Explicit</option>
+                <option value="true" selected>Explicit</option>
                 <option value="false">Not Explicit</option>
             </select>
             <div class="valid-feedback">
