--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,9 @@
     <a href="/pageHistory">
       <button type="button" class="btn btn-secondary btn-lg">Page History</button>
     </a>
+    <a href="/adminPage">
+      <button type="button" class="btn btn-secondary btn-lg">Admin Only Page</button>
+    </a>
     <a href="/login">
       <button type="button" class="btn btn-secondary btn-lg">login</button>
     </a>
