admins only ones that create artists

--- a/src/main/resources/templates/fragments/fragment_parts/footer-parts.html
+++ b/src/main/resources/templates/fragments/fragment_parts/footer-parts.html
@@ -14,7 +14,7 @@
 </a>
 
 
-<a th:fragment="createArtist (content)" href="/allArtists/addArtist">
+<a th:fragment="createArtist (content)"  sec:authorize="hasRole('ADMIN')" href="/allArtists/addArtist">
     <button  type="button" class="btn btn-primary">
         Create Artist
     </button>
